--- a/preamble/math.tex
+++ b/preamble/math.tex
@@ -50,6 +50,8 @@
 \newcommand{\powersetz}[1]{\mathscr{P}^*(#1)}
 \newcommand{\strat}[1]{\emph{#1}}
 
+\newcommand{\intvl}[1]{\llbracket #1 \rrbracket}
+
 \DeclareMathOperator{\Regret}{Regret}
 \DeclareMathOperator{\SCORE}{Score}
 \DeclareMathOperator{\PMR}{PMR}
